fix form spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,3 +28,8 @@
 .question {
   margin: .5rem 0;
 }
+
+.breadcrumb {
+
+  background-color: #FFFFFF;
+}
